feat(canteen): improvement on history, upgrading to turboself-api

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "reanimated-color-picker": "^3.0.4",
     "scolengo-api": "^3.0.5",
     "text-encoding": "^0.7.0",
-    "turbawself": "^1.1.1",
+    "turboself-api": "^2.0.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
