--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-static-block": "^7.25.8",
     "@stylistic/eslint-plugin": "^2.1.0",
     "@types/base-64": "^1.0.2",
     "@types/html-to-text": "^9.0.4",
