--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "restore-app-icon": "cp -a ./AppIcon.appiconset.backup/. ios/Papillon/Images.xcassets/AppIcon.appiconset/"
   },
   "dependencies": {
+    "@babel/runtime": "^7.25.7",
     "@birdwingo/react-native-reanimated-graph": "^1.1.3",
     "@candlefinance/app-icon": "^0.4.5",
     "@notifee/react-native": "^7.8.2",
@@ -18,6 +19,7 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native/assets-registry": "^0.75.4",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
