--- a/package.json
+++ b/package.json
@@ -60,15 +60,18 @@
     "html-entities": "^2.5.2",
     "html-react-parser": "^5.1.12",
     "html-to-text": "^9.0.5",
+    "https": "^1.0.0",
     "js-base64": "^3.7.7",
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.7.0",
     "lucide-react-native": "^0.378.0",
     "openid-client": "^5.7.0",
+    "pako": "^2.1.0",
     "pawdirecte": "^1.4.0",
     "pawnilim": "^0.2.0",
     "pawnote": "^1.0.3",
     "pawrd": "^0.4.0",
+    "qs": "^6.13.0",
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-barcode-svg": "^0.0.15",
