chore(deps): bump to recommended

--- a/package.json
+++ b/package.json
@@ -28,21 +28,20 @@
     "cal-parser": "^1.0.2",
     "date-fns": "^3.6.0",
     "esup-multi.js": "^1.0.2",
-    "expo": "^51.0.36",
     "expo-asset": "^10.0.10",
     "expo-auth-session": "~5.5.2",
     "expo-av": "~14.0.6",
     "expo-barcode-scanner": "~13.0.1",
     "expo-blur": "~13.0.2",
     "expo-brightness": "~12.0.1",
-    "expo-camera": "~15.0.13",
+    "expo-camera": "~15.0.16",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-dev-menu": "^5.0.16",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-intent-launcher": "^11.0.1",
@@ -50,7 +49,7 @@
     "expo-linking": "^6.3.1",
     "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
-    "expo-media-library": "~16.0.4",
+    "expo-media-library": "~16.0.5",
     "expo-navigation-bar": "~3.0.7",
     "expo-sensors": "~13.0.9",
     "expo-sharing": "~12.0.1",
@@ -78,7 +77,7 @@
     "react-native-barcode-svg": "^0.0.15",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "^3.6.1",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-infinite-pager": "^0.3.16",
     "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
@@ -111,9 +110,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-native": "^4.1.0",
-    "expo": "~51.0.17",
+    "expo": "~51.0.38",
     "react-native-svg-transformer": "^1.5.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
