--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "restore-app-icon": "cp -a ./AppIcon.appiconset.backup/. ios/Papillon/Images.xcassets/AppIcon.appiconset/"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
     "@birdwingo/react-native-reanimated-graph": "^1.1.3",
     "@candlefinance/app-icon": "^0.4.5",
     "@notifee/react-native": "^7.8.2",
@@ -19,6 +20,7 @@
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native/assets-registry": "^0.76.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -68,7 +70,7 @@
     "lottie-react-native": "^6.7.0",
     "lucide-react-native": "^0.378.0",
     "openid-client": "^5.7.0",
-    "pawdirecte": "^1.5.0",
+    "pawdirecte": "^1.6.0",
     "pawnilim": "^0.2.0",
     "pawnote": "^1.0.3",
     "pawrd": "^0.6.1",
