--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "restore-app-icon": "cp -a ./AppIcon.appiconset.backup/. ios/Papillon/Images.xcassets/AppIcon.appiconset/"
   },
   "dependencies": {
-    "@babel/runtime": "^7.26.0",
     "@birdwingo/react-native-reanimated-graph": "^1.1.3",
     "@candlefinance/app-icon": "^0.4.5",
     "@notifee/react-native": "^7.8.2",
@@ -20,7 +19,6 @@
     "@react-native-community/netinfo": "11.3.1",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native/assets-registry": "^0.76.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -36,14 +34,14 @@
     "expo-barcode-scanner": "~13.0.1",
     "expo-blur": "~13.0.2",
     "expo-brightness": "~12.0.1",
-    "expo-camera": "~15.0.16",
+    "expo-camera": "~15.0.13",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
     "expo-dev-menu": "^5.0.16",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.10",
+    "expo-font": "~12.0.7",
     "expo-haptics": "~13.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-intent-launcher": "^11.0.1",
@@ -51,7 +49,7 @@
     "expo-linking": "^6.3.1",
     "expo-location": "~17.0.1",
     "expo-manifests": "^0.14.3",
-    "expo-media-library": "~16.0.5",
+    "expo-media-library": "~16.0.4",
     "expo-navigation-bar": "~3.0.7",
     "expo-sensors": "~13.0.9",
     "expo-sharing": "~12.0.1",
@@ -72,14 +70,14 @@
     "openid-client": "^5.7.0",
     "pawdirecte": "^1.6.0",
     "pawnilim": "^0.2.0",
-    "pawnote": "^1.0.3",
+    "pawnote": "^1.2.2",
     "pawrd": "^0.6.1",
     "react": "18.2.0",
     "react-native": "^0.74.3",
     "react-native-barcode-svg": "^0.0.15",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "^3.6.1",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-infinite-pager": "^0.3.16",
     "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
@@ -112,9 +110,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-native": "^4.1.0",
-    "expo": "~51.0.38",
+    "expo": "~51.0.17",
     "react-native-svg-transformer": "^1.5.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
