--- a/package.json
+++ b/package.json
@@ -78,13 +78,13 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-draglist": "^3.6.1",
     "react-native-gesture-handler": "^2.16.1",
+    "react-native-htmlview": "^0.17.0",
     "react-native-infinite-pager": "^0.3.16",
     "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
     "react-native-pressable-scale": "^2.1.0",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
