feat(fonts): Ajouter la prise en charge de nouvelles polices FixelText dans le projet

--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "buildNumber": "7500",
+      /* "buildNumber": "7500", */
       "supportsTablet": true,
       "appStoreUrl": "https://apps.apple.com/us/app/papillon-lappli-scolaire/id6477761165",
       "bundleIdentifier": "xyz.getpapillon.ios",
